--- a/index.html
+++ b/index.html
@@ -3,44 +3,107 @@
 <head>
   <meta charset="UTF-8">
   <title>Konstantin Sivokha - Resume</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f8f9fa;
+      color: #212529;
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 40px 20px;
+      line-height: 1.6;
+    }
+
+    h1 {
+      color: #2c3e50;
+      border-bottom: 2px solid #dee2e6;
+      padding-bottom: 10px;
+    }
+
+    h2 {
+      color: #495057;
+      margin-top: 30px;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    ul li::before {
+      content: "•";
+      color: #0d6efd;
+      display: inline-block;
+      width: 1em;
+      margin-left: -1em;
+    }
+
+    a {
+      color: #0d6efd;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .section {
+      margin-bottom: 20px;
+    }
+  </style>
 </head>
 <body>
+
   <h1>Konstantin Sivokha</h1>
-  <p><strong>Position:</strong> IT Director | Cloud & Enterprise Architect | Business Development Director</p>
+  <p><strong>Position:</strong> IT Director | Cloud & Enterprise Architect | Director of Business Development</p>
 
-  <h2>Contact</h2>
-  <ul>
-    <li>📞 +7 (701) 512 01 49</li>
-    <li>📧 <a href="mailto:k.sivokha@gmail.com">k.sivokha@gmail.com</a></li>
-    <li>📍 Astana, Kazakhstan</li>
-    <li>🔗 <a href="https://www.linkedin.com/in/konstantin-sivokha" target="_blank">LinkedIn</a></li>
-  </ul>
+  <div class="section">
+    <h2>Contact</h2>
+    <ul>
+      <li>📞 +7 (701) 512 01 49</li>
+      <li>📧 <a href="mailto:k.sivokha@gmail.com">k.sivokha@gmail.com</a></li>
+      <li>📍 Astana, Kazakhstan</li>
+      <li>🔗 <a href="https://www.linkedin.com/in/konstantin-sivokha" target="_blank">LinkedIn</a></li>
+    </ul>
+  </div>
 
-  <h2>Top Skills</h2>
-  <ul>
-    <li>Digital Transformation & IT Strategy</li>
-    <li>Cloud, Big Data, AI, IoT</li>
-    <li>Business Architecture (SAP, ERP, CRM)</li>
-    <li>Cybersecurity & IT Risk Management</li>
-    <li>Team Leadership & C-Level Negotiation</li>
-  </ul>
+  <div class="section">
+    <h2>Top Skills</h2>
+    <ul>
+      <li>Digital Transformation & IT Strategy</li>
+      <li>Cloud, Big Data, AI, IoT</li>
+      <li>Business Architecture (SAP, ERP, CRM)</li>
+      <li>Cybersecurity & IT Risk Management</li>
+      <li>Team Leadership & C-Level Negotiation</li>
+    </ul>
+  </div>
 
-  <h2>Experience</h2>
-  <p><strong>SAP Azerbaijan</strong> – Global Account Director (2022–2024)</p>
-  <p><strong>SAP Kazakhstan</strong> – Senior Account Executive (2017–2022)</p>
+  <div class="section">
+    <h2>Experience</h2>
+    <ul>
+      <li><strong>SAP Azerbaijan</strong> – Global Account Director (2022–2024)</li>
+      <li><strong>SAP Kazakhstan</strong> – Senior Account Executive (2017–2022)</li>
+    </ul>
+  </div>
 
-  <h2>Education</h2>
-  <ul>
-    <li>Tomsk State University – BE in Software Engineering</li>
-    <li>Kokshetau State University – BEd in Computer Science Education</li>
-  </ul>
+  <div class="section">
+    <h2>Education</h2>
+    <ul>
+      <li>Tomsk State University – BE in Software Engineering</li>
+      <li>Kokshetau State University – BEd in Computer Science Education</li>
+    </ul>
+  </div>
 
-  <h2>Languages</h2>
-  <ul>
-    <li>English – Professional</li>
-    <li>Russian – Native</li>
-    <li>Kazakh – Limited</li>
-    <li>Azerbaijani – Elementary</li>
-  </ul>
+  <div class="section">
+    <h2>Languages</h2>
+    <ul>
+      <li>English – Professional</li>
+      <li>Russian – Native</li>
+      <li>Kazakh – Limited</li>
+      <li>Azerbaijani – Elementary</li>
+    </ul>
+  </div>
+
 </body>
 </html>
+
