--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     }
 
     ul li::before {
-      content: "•";
+      content: "▪";
       color: #0d6efd;
       display: inline-block;
       width: 1em;
@@ -70,11 +70,15 @@
   <div class="section">
     <h2>Top Skills</h2>
     <ul>
-      <li>Digital Transformation & IT Strategy</li>
-      <li>Cloud, Big Data, AI, IoT</li>
-      <li>Business Architecture (SAP, ERP, CRM)</li>
-      <li>Cybersecurity & IT Risk Management</li>
-      <li>Team Leadership & C-Level Negotiation</li>
+      <li>Strategic Business Development</li>
+      <li>Digital Transformation and IT Strategy Management</li>
+      <li>Implementation and Development of Cloud Solutions, Big Data, AI, and IoT</li>
+      <li>Design and Execution of Business Solution Architecture (SAP, ERP, CRM, BI)</li>
+      <li>Business Process Optimization and Efficiency Improvement</li>
+      <li>Cybersecurity and IT Risk Management</li>
+      <li>Building and Leading High-Performance Teams</li>
+      <li>Engagement with C-Level Executives and Government Authorities</li>
+      <li>Negotiation at All Levels</li>
     </ul>
   </div>
 
