--- a/index.html
+++ b/index.html
@@ -84,10 +84,26 @@
 
   <div class="section">
     <h2>Experience</h2>
-    <ul>
-      <li><strong>SAP Azerbaijan</strong> – Global Account Director (2022–2024)</li>
-      <li><strong>SAP Kazakhstan</strong> – Senior Account Executive (2017–2022)</li>
-    </ul>
+    <h3>SAP Azerbaijan LLP</h3>
+  <p><strong>Global Account Director SOCAR, Oil & Gas Azerbaijan</strong><br>
+  <em>October 2022 – December 2024 (2 years 2 months), Baku, Azerbaijan</em></p>
+  
+  <p><strong>Job Responsibilities:</strong></p>
+  <ul>
+    <li>Managed the strategic relationship with SOCAR, a key client in Azerbaijan</li>
+    <li>Established and maintained long-term partnerships with C-level executives</li>
+    <li>Led negotiations on sales terms, contracts, and pricing strategies to drive mutually beneficial outcomes</li>
+    <li>Directed a cross-functional team to deliver comprehensive solutions and effectively address client needs</li>
+    <li>Structured and managed complex deals to optimize value for both the client and the company</li>
+    <li>Consistently achieved or exceeded sales performance targets</li>
+  </ul>
+
+  <p><strong>Achievements:</strong></p>
+  <ul>
+    <li>Developed the document <em>\"Concept for the Transformation of SOCAR's Business Technology Platform\"</em>, aimed at digitalization and improving efficiency of business process management</li>
+    <li>Implemented an integration architecture for cloud and on-premise solutions, reducing IT infrastructure costs</li>
+    <li>Achieved quota fulfillment in 2023, earning titles of <em>\"Top On-prem Performer 2023\"</em> and <em>\"Top Cloud Performer 2023\"</em></li>
+  </ul>
   </div>
 
   <div class="section">
