--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   <h1>Konstantin Sivokha</h1>
   <p><strong>Position:</strong> IT Director | Cloud & Enterprise Architect | Director of Business Development</p>
 
+  <!-- Контактная информация -->
   <div class="section">
     <h2>Contact</h2>
     <ul>
@@ -66,7 +67,7 @@
       <li>🔗 <a href="https://www.linkedin.com/in/konstantin-sivokha" target="_blank">LinkedIn</a></li>
     </ul>
   </div>
-
+<!-- Блок основных скилов -->
   <div class="section">
     <h2>Top Skills</h2>
     <ul>
@@ -82,30 +83,69 @@
     </ul>
   </div>
 
+  <!-- Блок опыта работы в разных компания -->
   <div class="section">
     <h2>Experience</h2>
-    <h3>SAP Azerbaijan LLP</h3>
-  <p><strong>Global Account Director SOCAR, Oil & Gas Azerbaijan</strong><br>
-  <em>October 2022 – December 2024 (2 years 2 months), Baku, Azerbaijan</em></p>
+      <h3>SAP Azerbaijan LLP</h3>
+        <p><strong>Global Account Director SOCAR, Oil & Gas Azerbaijan</strong><br>
+            <em>October 2022 – December 2024 (2 years 2 months), Baku, Azerbaijan</em></p>
   
-  <p><strong>Job Responsibilities:</strong></p>
-  <ul>
-    <li>Managed the strategic relationship with SOCAR, a key client in Azerbaijan</li>
-    <li>Established and maintained long-term partnerships with C-level executives</li>
-    <li>Led negotiations on sales terms, contracts, and pricing strategies to drive mutually beneficial outcomes</li>
-    <li>Directed a cross-functional team to deliver comprehensive solutions and effectively address client needs</li>
-    <li>Structured and managed complex deals to optimize value for both the client and the company</li>
-    <li>Consistently achieved or exceeded sales performance targets</li>
-  </ul>
+        <p><strong>Job Responsibilities:</strong></p>
+          <ul>
+            <li>Managed the strategic relationship with SOCAR, a key client in Azerbaijan</li>
+            <li>Established and maintained long-term partnerships with C-level executives</li>
+            <li>Led negotiations on sales terms, contracts, and pricing strategies to drive mutually beneficial outcomes</li>
+            <li>Directed a cross-functional team to deliver comprehensive solutions and effectively address client needs</li>
+            <li>Structured and managed complex deals to optimize value for both the client and the company</li>
+            <li>Consistently achieved or exceeded sales performance targets</li>
+          </ul>
 
-  <p><strong>Achievements:</strong></p>
-  <ul>
-    <li>Developed the document <em>\"Concept for the Transformation of SOCAR's Business Technology Platform\"</em>, aimed at digitalization and improving efficiency of business process management</li>
-    <li>Implemented an integration architecture for cloud and on-premise solutions, reducing IT infrastructure costs</li>
-    <li>Achieved quota fulfillment in 2023, earning titles of <em>\"Top On-prem Performer 2023\"</em> and <em>\"Top Cloud Performer 2023\"</em></li>
-  </ul>
+        <p><strong>Achievements:</strong></p>
+          <ul>
+            <li>Developed the document <em>\"Concept for the Transformation of SOCAR's Business Technology Platform\"</em>, aimed at digitalization and improving efficiency of business process management</li>
+            <li>Implemented an integration architecture for cloud and on-premise solutions, reducing IT infrastructure costs</li>
+            <li>Achieved quota fulfillment in 2023, earning titles of <em>\"Top On-prem Performer 2023\"</em> and <em>\"Top Cloud Performer 2023\"</em></li>
+          </ul>
+    
+<!-- SAP Kazakhstan Experience Block -->
+<h3>SAP Kazakhstan LLP</h3>
+<p><strong>Senior Account Executive, KazMunayGas, Oil & Gas Kazakhstan</strong><br>
+<em>January 2017 – September 2022 (5 years 10 months), Astana, Kazakhstan</em></p>
+
+<p><strong>Job Responsibilities:</strong></p>
+<ul>
+  <li>Managed relationships with JSC NC "KazMunayGas," a key state-owned oil and gas client, identifying new opportunities and managing deals from qualification to closure</li>
+  <li>Selected and proposed solutions based on SAP products to meet customer needs</li>
+  <li>Negotiated contracts, sales terms, and pricing policies</li>
+  <li>Collaborated with pre-sales, consulting, and product development teams to provide comprehensive solutions</li>
+  <li>Ensured a high level of customer satisfaction through prompt support and consultation</li>
+</ul>
+
+<p><strong>Achievements:</strong></p>
+<ul>
+  <li>Developed strategic documents, including a “Master Plan” and a “Concept,” for JSC NC "KazMunayGas", defining key stages and approaches to implementing SAP S/4HANA</li>
+  <li>Formulated digital transformation roadmaps, ensuring a structured approach to launching SAP implementation projects</li>
+</ul>
+
+<p><strong>Senior Business Solutions Architect in Oil & Gas</strong></p>
+
+<p><strong>Job Responsibilities:</strong></p>
+<ul>
+  <li>Led pre-sales activities, providing support throughout all stages of the sales cycle, including strategy, presentations, and client materials</li>
+  <li>Analyzed business processes, identified requirements and gaps, and developed IT strategies to enhance competitive advantages</li>
+  <li>Designed and integrated SAP solutions, prepared demonstrations, and facilitated workshops using the Design Thinking methodology</li>
+  <li>Supported preparation of responses to RFx (Requests for Information/Proposal/Quotation) and participated in marketing and commercial events</li>
+  <li>Collaborated with the sales team, identified new opportunities within client accounts, and provided training to colleagues and partners</li>
+</ul>
+
+<p><strong>Achievements:</strong></p>
+<ul>
+  <li>Recognized as the top innovative SAP architect in the oil and gas industry (2019)</li>
+  <li>Developed SAP architecture enabling the first cloud solution in the region for automating vehicle and equipment management</li>
+</ul>
+
+  
   </div>
-
   <div class="section">
     <h2>Education</h2>
     <ul>
