--- a/index.html
+++ b/index.html
@@ -143,6 +143,26 @@
   <li>Recognized as the top innovative SAP architect in the oil and gas industry (2019)</li>
   <li>Developed SAP architecture enabling the first cloud solution in the region for automating vehicle and equipment management</li>
 </ul>
+    
+<!-- Softline Group Experience Block -->
+<h3>Softline Group JSC</h3>
+<p><strong>SAP Business Analyst and Strategist</strong><br>
+<em>February 2016 – December 2016 (11 months), Astana, Kazakhstan</em></p>
+
+<p><strong>Project:</strong> Architecture audit of the SAP business solutions in the Oil & Gas company.</p>
+
+<p><strong>Job Responsibilities:</strong></p>
+<ul>
+  <li>Analyzed the existing SAP architecture</li>
+  <li>Developed a functional map of SAP business solutions</li>
+  <li>Created an IT service catalogue and a list of transactions used in business processes</li>
+  <li>Conducted analysis of business and functional requirements for information systems</li>
+  <li>Performed EPC-based business process coverage analysis in the SAP context</li>
+  <li>Described functional requirements for SAP development (requirements model)</li>
+  <li>Provided recommendations for SAP architecture development</li>
+  <li>Developed a conceptual target SAP architecture and implementation roadmap</li>
+  <li>Outlined SAP architecture modification model, project initiatives, and implementation schedule</li>
+</ul>
 
   
   </div>
