--- a/index.html
+++ b/index.html
@@ -153,16 +153,32 @@
 
 <p><strong>Job Responsibilities:</strong></p>
 <ul>
-  <li>Analyzed the existing SAP architecture</li>
-  <li>Developed a functional map of SAP business solutions</li>
-  <li>Created an IT service catalogue and a list of transactions used in business processes</li>
-  <li>Conducted analysis of business and functional requirements for information systems</li>
-  <li>Performed EPC-based business process coverage analysis in the SAP context</li>
-  <li>Described functional requirements for SAP development (requirements model)</li>
-  <li>Provided recommendations for SAP architecture development</li>
-  <li>Developed a conceptual target SAP architecture and implementation roadmap</li>
-  <li>Outlined SAP architecture modification model, project initiatives, and implementation schedule</li>
+  <li>
+    <strong>Analysis of the existing architecture of SAP:</strong>
+    <ul>
+      <li>Development of a functional map of the SAP business solutions</li>
+      <li>Development of an IT service catalogue</li>
+      <li>List of transactions used in business processes</li>
+    </ul>
+  </li>
+  <li>
+    <strong>Analysis of business and functional requirements to the Information Systems:</strong>
+    <ul>
+      <li>Analysis of Business Process Coverage (EPC) related to SAP business solutions</li>
+      <li>Description of functional requirements for SAP solution development (requirements model)</li>
+      <li>Description of recommendations for SAP architecture development</li>
+    </ul>
+  </li>
+  <li>
+    <strong>Development of the SAP conceptual target architecture and its implementation roadmap:</strong>
+    <ul>
+      <li>Model of the SAP Architecture modification</li>
+      <li>Project initiatives and expected outputs</li>
+      <li>Project implementation schedule</li>
+    </ul>
+  </li>
 </ul>
+
 
   
   </div>
