--- a/index.html
+++ b/index.html
@@ -179,6 +179,30 @@
   </li>
 </ul>
 
+<!-- IQ-Solutions Experience Block -->
+<h3>IQ-Solutions LLP</h3>
+<p><strong>SAP Implementation Manager</strong><br>
+<em>January 2015 – December 2016 (2 years), Astana, Kazakhstan</em></p>
+
+<p><strong>Project Focus:</strong> Implementation of various SAP projects in Oil & Gas companies in Kazakhstan.</p>
+
+<p><strong>Job Responsibilities:</strong></p>
+<ul>
+  <li>Developed comprehensive project plans outlining SAP implementation timelines, resource requirements, and milestones</li>
+  <li>Coordinated with various stakeholders including business leaders, IT teams, vendors, and end-users</li>
+  <li>Gathered and analyzed business requirements and translated them into functional SAP specifications</li>
+  <li>Collaborated with technical teams and consultants to design SAP solutions aligned with business needs and best practices</li>
+  <li>Effectively allocated resources including project team members, consultants, and support personnel</li>
+  <li>Identified potential project risks and developed mitigation strategies to minimize impact on timeline, budget, and scope</li>
+</ul>
+
+<p><strong>Key Projects:</strong></p>
+<ul>
+  <li>Successfully managed an SAP migration project with technical and functional upgrades to the latest version</li>
+  <li>Prepared blueprint design for S/4HANA transition</li>
+  <li>Led implementation of SAP processes for allocating underground gas storage costs</li>
+  <li>Participated in project management for SAP integration with various non-SAP systems</li>
+</ul>
 
   
   </div>
