--- a/index.html
+++ b/index.html
@@ -204,7 +204,26 @@
   <li>Participated in project management for SAP integration with various non-SAP systems</li>
 </ul>
 
-  
+  <!-- BPC Consult Experience Block -->
+<h3>BPC Consult LLP</h3>
+<p><strong>SAP Project Manager</strong><br>
+<em>August 2013 – December 2014 (1 year 5 months), Astana, Kazakhstan</em></p>
+
+<p><strong>Job Responsibilities:</strong></p>
+<ul>
+  <li>Supported implemented SAP systems and functionalities, including FI, FI-AA, CO, MM, SD, PM, PS, and BW</li>
+  <li>Gathered and analyzed requirements to meet business needs for implementing new SAP functionalities</li>
+  <li>Led and managed cross-functional project teams (15+ people), including SAP consultants, technical experts, and business analysts</li>
+  <li>Facilitated clear and effective communication among team members, stakeholders, and senior management</li>
+  <li>Identified and resolved issues, conflicts, and challenges during SAP support projects using effective problem-solving and stakeholder collaboration</li>
+</ul>
+
+<p><strong>Achievements:</strong></p>
+<ul>
+  <li>Created a practical and effective service desk for the client based on ITSM standards</li>
+  <li>Successfully optimized business processes in inventory control using SAP solutions</li>
+</ul>
+
   </div>
   <div class="section">
     <h2>Education</h2>
