--- a/index.html
+++ b/index.html
@@ -224,6 +224,28 @@
   <li>Successfully optimized business processes in inventory control using SAP solutions</li>
 </ul>
 
+    <!-- ERP-Service Experience Block -->
+<h3>ERP-Service LLP</h3>
+<p><strong>Expert in SAP EAM solutions</strong><br>
+<em>March 2010 – July 2013 (3 years 5 months), Astana, Kazakhstan</em></p>
+
+<p><strong>Job Responsibilities:</strong></p>
+<ul>
+  <li>Led SAP PM implementation, ensuring seamless integration with key modules (Materials Management, Finance, Production Planning) and external systems</li>
+  <li>Collaborated with cross-functional teams (production, procurement, engineering) for effective coordination and alignment with maintenance activities</li>
+  <li>Identified process improvement opportunities in maintenance operations to optimize asset reliability, minimize downtime, and reduce costs</li>
+  <li>Provided comprehensive training and support on SAP PM module for end-users, technicians, and stakeholders</li>
+  <li>Delivered efficient technical support, troubleshooting, and timely resolution of SAP PM module issues</li>
+</ul>
+
+<p><strong>Key Projects:</strong></p>
+<ul>
+  <li>Led successful implementation project automating 'IT Equipment Accounting' within SAP PM, streamlining asset tracking and management</li>
+  <li>Standardized maintenance activities using SAP PM's Maintenance Task Lists, ensuring consistent and efficient task execution</li>
+  <li>Developed scope of work requirements for automation of plant maintenance processes at a refinery in Kazakhstan</li>
+  <li>Collaborated with PwC on a full-scale SAP system quality audit, aligning implementation with industry best practices</li>
+</ul>
+
   </div>
   <div class="section">
     <h2>Education</h2>
