--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
   <li>Successfully optimized business processes in inventory control using SAP solutions</li>
 </ul>
 
-    <!-- ERP-Service Experience Block -->
+<!-- ERP-Service Experience Block -->
 <h3>ERP-Service LLP</h3>
 <p><strong>Expert in SAP EAM solutions</strong><br>
 <em>March 2010 – July 2013 (3 years 5 months), Astana, Kazakhstan</em></p>
@@ -244,6 +244,19 @@
   <li>Standardized maintenance activities using SAP PM's Maintenance Task Lists, ensuring consistent and efficient task execution</li>
   <li>Developed scope of work requirements for automation of plant maintenance processes at a refinery in Kazakhstan</li>
   <li>Collaborated with PwC on a full-scale SAP system quality audit, aligning implementation with industry best practices</li>
+</ul>
+
+<!-- Software Services Experience Block -->
+<h3>LLP “Software Services”</h3>
+<p><strong>Head of the Software Development, Implementation and Maintenance Department</strong><br>
+<em>April 2009 – February 2010 (11 months), Kazakhstan</em></p>
+
+<p><strong>Job Responsibilities:</strong></p>
+<ul>
+  <li>Provided IT consulting services for small and medium-sized businesses, including participation in negotiations and presales activities</li>
+  <li>Developed design solutions and technical documentation for IT project implementation, including technical specifications and blueprints</li>
+  <li>Visited clients for diagnostics and problem-solving related to PCs, software, and automation of primary business processes</li>
+  <li>Configured and maintained network and server equipment to ensure optimal performance</li>
 </ul>
 
   </div>
