--- a/index.html
+++ b/index.html
@@ -258,6 +258,44 @@
   <li>Visited clients for diagnostics and problem-solving related to PCs, software, and automation of primary business processes</li>
   <li>Configured and maintained network and server equipment to ensure optimal performance</li>
 </ul>
+<!-- UniCredit Experience Block -->
+<h3>JSC UniCredit</h3>
+<p><strong>Senior Specialist in the Automation and Support of Banking Processes (IT Division)</strong><br>
+<em>March 2008 – April 2009 (1 year 2 months), Kazakhstan</em></p>
+
+<p><strong>Job Responsibilities:</strong></p>
+<ul>
+  <li>Maintained bank information systems</li>
+  <li>Provided consultations to branch employees on the use of banking software</li>
+  <li>Installed, adjusted, and diagnosed ATMs and POS terminals (NCR, Wincor, Nixdorf)</li>
+  <li>Administered Active Directory on Microsoft Windows Server 2003</li>
+  <li>Configured and administered MS SQL Server 2000 under Windows Server 2003</li>
+</ul>
+
+<p><strong>Achievements:</strong></p>
+<ul>
+  <li>Developed a C++ application to automate unlocking of user accounts in MS SQL Server, significantly accelerating access restoration for banking software users</li>
+</ul>
+
+    <!-- Kazpost Experience Block -->
+<h3>JSC Kazpost</h3>
+<p><strong>Principal Specialist of the IT Department</strong><br>
+<em>March 2002 – March 2008 (6 years 1 month), Kazakhstan</em></p>
+
+<p><strong>Job Responsibilities:</strong></p>
+<ul>
+  <li>Supported and maintained banking software such as "Amanat" and "Colvir"</li>
+  <li>Maintained payroll calculation processes in "1C Enterprise" software</li>
+  <li>Worked with various databases including IBM DB2, MySQL, and Microsoft SQL Server</li>
+  <li>Provided server software maintenance and support: MS Active Directory, MS SQL, MS Exchange Server, Unix</li>
+  <li>Supported and maintained server, satellite, and network infrastructure</li>
+</ul>
+
+<p><strong>Achievements:</strong></p>
+<ul>
+  <li>Participated in launching ATMs into commercial operation, which enabled new client services and increased company revenue</li>
+  <li>Developed C++ software that automated the processing and sorting of received and sent postal parcels, reducing processing time, increasing speed and accuracy, and minimizing errors previously caused by manual handling</li>
+</ul>
 
   </div>
   <div class="section">
