--- a/index.html
+++ b/index.html
@@ -278,6 +278,17 @@
     </ul>
   </div>
 
+ <div class="section">
+    <h2>CERTIFICATIONS</h2>
+    <ul>
+      <li>MCP (Exam 70-290) - Managing and Maintaining a Microsoft Windows Server 2003 Environment</li>
+      <li>SAP Certified Application Associate - Enterprise Asset Management (Maintenance & Repair)</li>
+      <li>ITIL® - Foundation Certificate in IT Service Management</li>
+      <li>Integrating Generative AI into Business Strategy</li>
+      <li>Artificial Intelligence Foundations: Machine Learning</li>
+    </ul>
+  </div>
+  
   <div class="section">
     <h2>Languages</h2>
     <ul>
