--- a/index.html
+++ b/index.html
@@ -288,6 +288,27 @@
       <li>Artificial Intelligence Foundations: Machine Learning</li>
     </ul>
   </div>
+
+ <div class="section">
+    <h2>COURSES AND TRAININGS</h2>
+    <ul>
+      <li>Charismatic Speaker</li>
+      <li>Management of Company Business Processes: Optimization and Modeling</li>
+      <li>ITIL V3 Foundation</li>
+      <li>SAP PLM305 - Control of Technical Facilities</li>
+      <li>SAP PLM310 - Preventive Plant Maintenance and Service</li>
+      <li>SAP PLM315 - PM Data Processing</li>
+      <li>SAP PLM316 - PM Processing – Controlling</li>
+      <li>SAP BPC440 - SAP Business Planning and Consolidation</li>
+      <li>SAP CLD100 – SAP cloud solutions</li>
+      <li>SAP S4LG1 – Innovative Logistics Processes in SAP S/4HANA Enterprise Management</li>
+      <li>Fiscal Accounting</li>
+      <li>Managerial Accounting</li>
+      <li>Group Work Facilitation Skills</li>
+      <li>Improving the technical casing of process equipment for the production of gas and liquid
+hydrocarbons by applying RBI, RCM and FMEA methods</li>
+    </ul>
+  </div>
   
   <div class="section">
     <h2>Languages</h2>
