--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <title>Konstantin Sivokha - Resume</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f8f9fa;
-      color: #212529;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #fff;
+      color: #333;
       max-width: 800px;
-      margin: 0 auto;
-      padding: 40px 20px;
+      margin: 40px auto;
+      padding: 0 20px;
       line-height: 1.6;
     }
 
