--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
     </ul>
   </div>
 
+  <div class="summary">
+    <h2>Professional Summary</h2>
+    <p>
+      Strategic IT executive with 20+ years of experience in digital transformation, SAP architecture,
+      cloud solutions, and business technology strategy. Proven ability to lead large-scale projects in the
+      oil & gas sector, manage enterprise clients, and deliver innovative digital initiatives with measurable impact.
+    </p>
+  </div>
+  
   <div class="section">
     <h2>Top Skills</h2>
     <ul>
