--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Konstantin Sivokha - Resume</title>
+  <meta charset="UTF-8" />
+  <title>Konstantin Sivokha – Resume</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -15,45 +15,38 @@
     }
 
     h1 {
+      font-size: 32px;
+      margin-bottom: 0;
       color: #2c3e50;
-      border-bottom: 2px solid #dee2e6;
-      padding-bottom: 10px;
     }
 
     h2 {
-      color: #495057;
-      margin-top: 30px;
+      color: #444;
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 5px;
+      margin-top: 40px;
     }
 
     h3 {
-      margin-bottom: 5px;
-      color: #343a40;
+      margin: 10px 0 5px;
+      color: #0077b6;
     }
 
     ul {
-      list-style: none;
-      padding: 0;
+      padding-left: 20px;
     }
 
-    ul li::before {
-      content: "▪";
-      color: #0d6efd;
-      display: inline-block;
-      width: 1em;
-      margin-left: -1em;
+    ul li {
+      margin-bottom: 6px;
     }
 
-    a {
-      color: #0d6efd;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    .section {
+    .contact, .summary, .section {
       margin-bottom: 30px;
+    }
+
+    .subdued {
+      color: #666;
+      font-size: 0.9em;
     }
   </style>
 </head>
@@ -97,13 +90,14 @@
   </div>
 
   <div class="section">
-    <h2>Experience</h2>
+    <h2>Professional Experience</h2>
 
     <!-- SAP Azerbaijan -->
     <h3>SAP Azerbaijan LLP</h3>
     <p><strong>Global Account Director SOCAR, Oil & Gas Azerbaijan</strong><br>
     <em>October 2022 – December 2024 (2 years 2 months), Baku, Azerbaijan</em></p>
     <p><strong>Job Responsibilities:</strong></p>
+    
     <ul>
       <li>Managed the strategic relationship with SOCAR, a key client in Azerbaijan</li>
       <li>Established and maintained long-term partnerships with C-level executives</li>
